--- a/bs02.html
+++ b/bs02.html
@@ -17,6 +17,20 @@
 
 
 
+    <div class="container p-5 border bg-dark text-white">
+        <h1>My first bootstrap page</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at doloremque dignissimos, neque fugit totam,
+            cumque et nisi modi quia reiciendis nobis maxime itaque laudantium ipsam delectus, optio reprehenderit quod!
+        </p>
+    </div>
+
+    <div class="container p-5 border bg-dark text-primary">
+        <h1>My Second bootstrap page</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum at doloremque dignissimos, neque fugit totam,
+            cumque et nisi modi quia reiciendis nobis maxime itaque laudantium ipsam delectus, optio reprehenderit quod!
+        </p>
+    </div>
+
 
 
 
