--- a/bs03.html
+++ b/bs03.html
@@ -9,9 +9,25 @@
 </head>
 
 <body>
+    <div class="container-fluid mt-5">
+        <h1>Equal width Columns</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita dignissimos dicta cupiditate libero unde
+            ut, eum architecto sunt accusamus rerum ipsum, doloremque aliquam molestias officiis vel aut necessitatibus
+            provident hic!</p>
+    </div>
 
-
-
+    <div class="row">
+        <div class="col p-10 bg-dark text-white text-center">
+            My first col
+        </div>
+        <div class="col p-10 bg-primary text-white text-center">
+            My second col
+        </div>
+        <div class="col p-10 bg-dark text-white text-center">
+            My third col
+        </div>
+    </div>
+   
 
 
 
