--- a/bs07.html
+++ b/bs07.html
@@ -20,6 +20,15 @@
 
 
 
+    <div class="container-fluid mt-11">
+        <div class="display-1">display-1</div>
+        <div class="display-2">display-2</div>
+        <div class="display-3">display-3</div>
+        <div class="display-4">display-4</div>
+        <div class="display-5">display-5</div>
+        <div class="display-6">display-6</div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
