--- a/bs08.html
+++ b/bs08.html
@@ -10,12 +10,17 @@
 
 <body>
     <!-- Bootstrap Typography -->
+
+    <!-- using <small> in bootstrap -->
+
     <div class="container-fluid mt-5">
 
         <h1>Lyba here <small>from csschuckles</small></h1>
         <h1>Hey I'm h1 <small>heading</small></h1>
         <h1>hey I'm another h1 <small>heading</small></h1>
     </div>
+
+    <!-- using <mark> in bootstrap -->
 
     <div class="container-fluid mt-5">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi deserunt voluptatem numquam,
@@ -25,11 +30,20 @@
            <h1>Lyba here from <mark>csschuckles</mark></h1>
     </div>
 
+    <!-- using <abbr> in bootstrap -->
+
     <div class="container-fluid mt-11">
         <p><abbr title="World Health Organization">WHO</abbr></p>
     </div>
+    
+    <!-- using <code> in bootstrap -->
 
+        <div class="container-fluid mt-5">
 
+            <h1>Code tag is used in BS as follows:</h1>
+
+            <p>HTML uses <code>div</code> <code>span</code> <code>section</code> tags</p>
+        </div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
