--- a/bs08.html
+++ b/bs08.html
@@ -45,6 +45,12 @@
             <p>HTML uses <code>div</code> <code>span</code> <code>section</code> tags</p>
         </div>
 
+    <!--using <kbd> keyboard tag in BS-->
+
+        <div class="container-fluid mt-5">
+            <h1>Using KBD tag</h1>
+            <p>Use <kbd>ctrl + S</kbd> to save the document or file</p>
+        </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
