--- a/bs08.html
+++ b/bs08.html
@@ -25,9 +25,10 @@
     <div class="container-fluid mt-5">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit eligendi deserunt voluptatem numquam,
             mollitia commodi adipisci illo quia sapiente quae vero temporibus aut nulla nostrum laudantium? Dolorem
-           <mark>consequuntur laboriosam eum?</mark> consequuntur laboriosam eum?</p>
+            <mark>consequuntur laboriosam eum?</mark> consequuntur laboriosam eum?
+        </p>
 
-           <h1>Lyba here from <mark>csschuckles</mark></h1>
+        <h1>Lyba here from <mark>csschuckles</mark></h1>
     </div>
 
     <!-- using <abbr> in bootstrap -->
@@ -35,22 +36,33 @@
     <div class="container-fluid mt-11">
         <p><abbr title="World Health Organization">WHO</abbr></p>
     </div>
-    
+
     <!-- using <code> in bootstrap -->
 
-        <div class="container-fluid mt-5">
+    <div class="container-fluid mt-5">
 
-            <h1>Code tag is used in BS as follows:</h1>
+        <h1>Code tag is used in BS as follows:</h1>
 
-            <p>HTML uses <code>div</code> <code>span</code> <code>section</code> tags</p>
-        </div>
+        <p>HTML uses <code>div</code> <code>span</code> <code>section</code> tags</p>
+    </div>
 
     <!--using <kbd> keyboard tag in BS-->
 
-        <div class="container-fluid mt-5">
-            <h1>Using KBD tag</h1>
-            <p>Use <kbd>ctrl + S</kbd> to save the document or file</p>
-        </div>
+    <div class="container-fluid mt-5">
+        <h1>Using KBD tag</h1>
+        <p>Use <kbd>ctrl + S</kbd> to save the document or file</p>
+    </div>
+
+    <!--using <pre> to add extra spaces in BS -->
+
+    <div class="container-fluid mt-5">
+        <h1>Using pre tag to add extra spaces</h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero quisquam, soluta perferendis id unde excepturi
+            temporibus velit atque! Architecto sed a odio nobis quaerat est dolor sequi beatae repellendus nihil.</p>
+
+        <pre>Lorem, ipsum dolor sit amet consectetur                       adipisicing </pre>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
