--- a/bs08.html
+++ b/bs08.html
@@ -64,6 +64,22 @@
         <pre>Lorem, ipsum dolor sit amet consectetur                       adipisicing </pre>
     </div>
 
+    <!-- using classes in BOOTSTRAP-5 -->
+    <!-- .text-start -->
+
+    <div class="container-fluid mt-11">
+
+        <h1>Using different text classes in BOOTSTRAP-5</h1>
+        
+        <p class="text-start">Left aligned Text</p>
+        <!-- .text-end -->
+
+        <p class="text-end">Right aligned text</p>
+        <!-- .text-centre -->
+        
+        <p class="text-center">Centred aligned text</p>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
