--- a/bs08.html
+++ b/bs08.html
@@ -76,9 +76,25 @@
 
         <p class="text-end">Right aligned text</p>
         <!-- .text-centre -->
-        
+
         <p class="text-center">Centred aligned text</p>
     </div>
+
+    <!-- Text Cases -->
+    <!-- Uppercase,lowercase,capitalize -->
+
+    <div class="container-fluid mt-5">
+
+        <h1>Using different text cases</h1>
+
+        <p class="text-uppercase">csschuckles</p>
+        <p class="text-lowercase">Csschuckles</p>
+        <p class="text-capitalize">csschuckles</p>
+    </div>
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
